grml-vpn (0.17) unstable; urgency=low

  * Drop 'function' keyword to make script compatible to grml-shlib with
    dash as /bin/sh.

 -- Michael Prokop <mika@grml.org>  Fri, 07 Aug 2009 13:36:17 +0200

grml-vpn (0.16) unstable; urgency=low

  * Fix manpage handling of xsltproc.

 -- Michael Prokop <mika@grml.org>  Fri, 07 Dec 2007 00:12:21 +0100

grml-vpn (0.15) unstable; urgency=low

  * few typo fixes and message corrections 

 -- Michael Gebetsroither <michael.geb@gmx.at>  Fri,  7 Apr 2006 00:15:25 +0200

grml-vpn (0.14) unstable; urgency=low

  * few small fixes 

 -- Michael Gebetsroither <michael.geb@gmx.at>  Thu,  2 Feb 2006 17:05:15 +0100

grml-vpn (0.13) unstable; urgency=low

  * fixed small problem with spaces in command line args
  * make debug through DEBUG var work
  * Makefile fixes
  * added fakeroot example for user only usage to manpage
  * added bc to dependencies in debian/control

 -- Michael Gebetsroither <michael.geb@gmx.at>  Wed, 18 Jan 2006 01:12:54 +0100

grml-vpn (0.12) unstable; urgency=low

  * changed dependency to grml-shlib

 -- Michael Gebetsroither <michael.geb@gmx.at>  Fri, 11 Nov 2005 20:09:31 +0100

grml-vpn (0.11) unstable; urgency=low

  * make grml-vpn -h/help work as normal user also
  * adding logic to guess users ip if not given

 -- Michael Gebetsroither <michael.geb@gmx.at>  Tue,  8 Nov 2005 19:17:13 +0100

grml-vpn (0.10) unstable; urgency=low

  * a few fixes
  * adjusted usage examples in grml-vpn help 

 -- Michael Gebetsroither <michael.geb@gmx.at>  Mon,  7 Nov 2005 12:33:51 +0100

grml-vpn (0.09) unstable; urgency=low

  * new working version

 -- Michael Gebetsroither <michael.geb@gmx.at>  Wed, 12 Oct 2005 16:08:36 +0200

grml-vpn (0.08) unstable; urgency=low

  * a few manpage fixes (thx to mika)
  * fixed false prog_name from change to zsh
  * added usage example to -h/help
  * changed manpage to asciidoc (no more nroff, NEVER)
  * updated build dependencies (sorry, are quite heavy now)
  * fixed dir layout 
